vote jumping fix

--- a/catalist/static/css/style_all.sass
+++ b/catalist/static/css/style_all.sass
@@ -515,9 +515,9 @@ input
             font-size: 1em
             position: absolute
             padding-top: 15%
-            padding-left: 15%
-            padding-right: 15%
-            left: 10%
+            padding-left: 20%
+            //padding-right: 15%
+            //left: 10%
             letter-spacing: 0.8px
             font-weight: lighter
             
